--- a/style.css
+++ b/style.css
@@ -400,3 +400,39 @@ p{
   justify-content:center;
   align-items:center;
 }
+
+.appeal{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  margin:25vh auto 5vh auto;
+  color:var(--main-white);
+  background-color:rgba(96,169,151,0.8);
+  width:80%;
+}
+
+.appeal h2{
+  width:60%;
+  text-align:center;
+  text-shadow:0 0 5px #000;
+ }
+  
+#appeal-content{
+  text-align:justify;
+  width:80%;
+  font-size:1.5rem;
+}
+
+#donate-table, th, td {
+  border: 1px solid var(--main-white);
+  border-collapse: collapse;
+}
+
+#donate-table{
+  width:80%;
+}
+
+th, td {
+  padding: 15px;
+}
