--- a/style.css
+++ b/style.css
@@ -454,3 +454,14 @@ th, td {
   text-align:center;
   text-shadow:0 0 5px #000
  }
+
+ .about{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  margin:25vh auto 5vh auto;
+  color:var(--main-white);
+  background-color:rgba(45,74,83,0.8);
+  width:80%;
+ }
