--- a/style.css
+++ b/style.css
@@ -164,7 +164,6 @@ body{
 #announcements{
   background-color:var(--main-choc);
   height:80vh;
-  
 }
       
 h2{
@@ -192,7 +191,7 @@ p{
   justify-content:center;
 }
   
-.a-tile{
+.tile{
   background-color:var(--tile-bg);
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   border-radius: 2px;
@@ -205,21 +204,15 @@ p{
   border: 4px solid var(--main-yellow);
 }
   
-.a-tile img{
+.tile img{
   object-fit:cover;
   height:85%;
   width:100%;
   margin-top: 10px;
 }
       
-.updates{
+#updates{
   background-color:var(--main-brown);
-  width:100%;
-  padding-bottom:3vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
 }
             
 .updates-container{
@@ -229,33 +222,8 @@ p{
   justify-content:center;
 }  
       
-.updates-tile{
-  background-color:var(--tile-bg);
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  border-radius: 2px;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  height:100%;
-  width:100%;
-  border: 4px solid var(--main-yellow);
-}
-  
-.updates-tile img{
-  object-fit:cover;
-  height:85%;
-  width:100%;
-  margin-top: 10px;
-}
-      
-.activities{
+#activities{
   background-color:var(--main-choc);
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  padding-bottom:3vh;
-  width:100%;
 }
       
 .act-container{
@@ -266,22 +234,16 @@ p{
   width:90%;
 }
       
-.gallery{
+#gallery{
   background-color:var(--main-brown);
-  width:100%;
-  padding-bottom:3vh;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
 }
             
-.gallery a{
+#gallery a{
     color:var(--main-white);
     padding:10px 0;
 }
       
-.gallery p{
+#gallery p{
   font-weight:800;
   color:var(--main-white);
 }
@@ -307,13 +269,8 @@ p{
   align-items:center;
 }
       
-.quotes{
+#quotes{
   background-color:var(--main-choc);
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  width:100%;
 }
       
 .view_quotes{
@@ -341,14 +298,8 @@ p{
   width:50%;
 }
       
-.contact{
+#contact{
   background-color:var(--main-brown);
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-  width:100%;
-  margin-bottom: 3vh;
 }
       
 .location{
@@ -405,24 +356,27 @@ p{
   align-items:center;
 }
 
-.appeal{
+.page-content{
   display:flex;
   flex-direction:column;
   justify-content:center;
   align-items:center;
   margin:25vh auto 5vh auto;
   color:var(--main-white);
-  background-color:rgba(96,169,151,0.8);
   width:80%;
 }
 
-.appeal h2{
+#appeal{
+  background-color:rgba(96,169,151,0.8);
+}
+
+.page-content h2{
   width:60%;
   text-align:center;
   text-shadow:0 0 5px #000;
  }
   
-#appeal-content{
+.page-text{
   text-align:justify;
   width:80%;
   font-size:1.5rem;
