--- a/style.css
+++ b/style.css
@@ -432,3 +432,9 @@ th, td {
   background-color:rgba(169,169,175,0.8);
   padding-bottom: 2vh;
 }
+
+#activities-content{
+  background-color:#c5eca7;
+  padding-bottom: 2vh;
+ 
+}
