--- a/style.css
+++ b/style.css
@@ -239,8 +239,8 @@ p{
 }
             
 #gallery a{
-  color:var(--main-white);
-   padding:10px 0;
+    color:var(--main-white);
+    padding:10px 0;
 }
       
 #gallery p{
@@ -292,7 +292,7 @@ p{
   justify-content:space-around;
   align-items:center;
   flex-wrap: wrap;
-}
+  }
       
 .quote-tile img{
   padding:0 5vw;
@@ -360,16 +360,19 @@ p{
 }
 
 .page-content{
+  color:var(--main-brown);
   display:flex;
   flex-direction:column;
   justify-content:center;
   margin:25vh auto 5vh auto;
   width:90%;
   padding: 2vh;
+  line-height:1.5rem;
+  border-radius:5px;
 }
 
 .page-content p{
-  color:var(--main-white);
+  
   text-align:justify;
   text-shadow:none;
   font-size:1rem;
@@ -378,21 +381,23 @@ p{
 }
 
 .page-content h2{
+  color:var(--main-brown);
   width:60%;
   text-align:center;
-  text-shadow:0 0 5px #000;
-  font-size:2.5rem;
+/*  text-shadow:0 0 5px white;*/
+  font-size:2rem;
+  line-height:2.5rem;
   border: none;
   margin: 0 auto;
 }
 
 .page-content li{
   text-align:start;
-  color:var(--main-white);
-  }
+  color:var(--main-brown);
+}
       
 .yellow-text{
-  color:var(--main-yellow);
+  color:var(--main-white);
 }
       
 #appeal{
@@ -414,7 +419,12 @@ th, td {
 }
 
 #infrastructure{
-  background-color:var(--main-choc);
+  background-color:#c5eca7;
+  padding-bottom: 2vh;
+}
+      
+#activities-content{
+  background-color:#c5eca7;
   padding-bottom: 2vh;
 }
 
@@ -431,10 +441,4 @@ th, td {
 #volunteer{
   background-color:rgba(169,169,175,0.8);
   padding-bottom: 2vh;
-}
-
-#activities-content{
-  background-color:#c5eca7;
-  padding-bottom: 2vh;
- 
 }
