--- a/style.css
+++ b/style.css
@@ -441,6 +441,14 @@ th, td {
   padding-bottom: 2vh;
 }
 
+#about h2,h3, p{
+  color: antiquewhite;
+}
+
 .about-content{
   display:flex;
+}
+
+.about-content img{
+  width: 25%;
 }
