--- a/style.css
+++ b/style.css
@@ -441,8 +441,9 @@ th, td {
   padding-bottom: 2vh;
 }
 
-#about > h2,h3, p{
-  color: antiquewhite;
+#about{
+  background-color: beige;
+  padding-bottom: 2vh;
 }
 
 .about-content{
