--- a/style.css
+++ b/style.css
@@ -436,11 +436,6 @@ th, td {
   padding-bottom: 2vh;
 }
 
-#volunteer{
-  background-color:rgba(169,169,175,0.8);
-  padding-bottom: 2vh;
-}
-
 #about{
   background-color: beige;
   padding-bottom: 2vh;
@@ -461,4 +456,9 @@ th, td {
 
 #map{
   border: 2px solid var(--main-brown);
+}
+
+#volunteer{
+  background-color: aliceblue;
+  padding-bottom: 2vh;
 }
