--- a/style.css
+++ b/style.css
@@ -432,7 +432,7 @@ th, td {
 }
       
 #activities-content{
-  background-color: violet;
+  background-color: antiquewhite;
   padding-bottom: 2vh;
 }
 
