--- a/style.css
+++ b/style.css
@@ -462,3 +462,12 @@ th, td {
   background-color: aliceblue;
   padding-bottom: 2vh;
 }
+
+#activites-photo-link{
+background-color: cornsilk;
+padding-bottom: 2vh;
+}
+
+#activites-photo-link a{
+  color:var(--main-brown);
+}
